# Software_HW2

./: CMakeLists.txt  MTH9815_HW2_exercise1.cpp  MTH9815_HW2_exercise2.sln  productservice.h
q1/: MTH9815_HW2_exercise1.cpp
q2/: products.hpp  productservice.hpp  test_products.cpp
q3/: CMakeLists.txt  products.h  productservice.h  soa.h  test_products.cpp
